<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_chats"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="Чаты" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="Профиль" />

    <item
        android:id="@+id/nav_results"
        android:icon="@android:drawable/ic_menu_view"
        android:title="Результаты" />

</menu>
