...
        android:paddingTop="8dp"
        android:paddingBottom="12dp"
        android:gravity="center_vertical"
        android:background="@color/surface">

        <EditText
            android:id="@+id/editMessage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_bar"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
...
            android:textColor="@color/text_primary"
            android:textSize="15sp"
            android:maxLines="4"
            android:inputType="textMultiLine|textCapSentences" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_send_button"
            app:icon="@drawable/send_button"
            android:padding="10dp"/>
...
